docs/pages/versions/v53.0.0/sdk/media-library.mdx
---
title: 媒体库
description: 一个提供访问设备媒体库的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-53/packages/expo-media-library'
packageName: 'expo-media-library'
iconUrl: '/static/images/packages/expo-media-library.png'
platforms: ['android', 'ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';
import { SnackInline } from '~/ui/components/Snippet';

`expo-media-library` 提供对用户媒体库的访问，使他们能够在你的应用中访问已有的图片和视频，也可以保存新的图片和视频。你还可以订阅对用户媒体库所做的任何更新。

> **警告** Android 仅允许需要广泛访问照片的应用完全访问媒体库（这也是此包的用途）。请参阅 [Google Play 关于照片和视频权限政策的详细说明](https://support.google.com/googleplay/android-developer/answer/14115180)。

## 安装

<APIInstallSection />

## 在 app config 中配置

如果你在项目中使用 config plugins（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），你可以使用 `expo-media-library` 内置的 [config plugin](/config-plugins/introduction/) 进行配置。该插件允许你配置一些无法在运行时设置、且需要构建新的应用二进制文件后才会生效的属性。如果你的应用**不**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>

```json
{
  "expo": {
    "plugins": [
      [
        "expo-media-library",
        {
          "photosPermission": "允许 $(PRODUCT_NAME) 访问你的照片。",
          "savePhotosPermission": "允许 $(PRODUCT_NAME) 保存照片。",
          "isAccessMediaLocationEnabled": true
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'photosPermission',
      platform: 'ios',
      description:
        '在 **Info.plist** 中设置 iOS 的 `NSPhotoLibraryUsageDescription` 权限提示文案。',
      default: '"允许 $(PRODUCT_NAME) 访问你的照片。"',
    },
    {
      name: 'savePhotosPermission',
      platform: 'ios',
      description:
        '在 **Info.plist** 中设置 iOS 的 `NSPhotoLibraryAddUsageDescription` 权限提示文案。',
      default: '"允许 $(PRODUCT_NAME) 保存照片。"',
    },
    {
      name: 'preventAutomaticLimitedAccessAlert',
      platform: 'ios',
      description:
        '当用户对照片库的访问受限时，防止自动显示受限访问提示。适用于只想访问受限照片库，而不希望 iOS 强制显示提示的应用。',
      default: 'false',
    },
    {
      name: 'isAccessMediaLocationEnabled',
      platform: 'android',
      description:
        '设置是否在 Android 上请求 `ACCESS_MEDIA_LOCATION` 权限。',
      default: 'false',
    },
  ]}
/>

<ConfigReactNative>

如果你没有使用 Continuous Native Generation（[CNG](/workflow/continuous-native-generation/)），或者你是手动使用原生 **android** 和 **ios** 项目，那么你需要在原生项目中添加以下权限和配置：

**Android**

- 要访问资源位置（纬度和经度 EXIF 标签），请将 `ACCESS_MEDIA_LOCATION` 权限添加到你项目的 **android/app/src/main/AndroidManifest.xml**：

  ```xml
  <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
  ```

- Android 10 起支持 [分区存储](https://developer.android.com/training/data-storage#scoped-storage)。要让 `expo-media-library` 与分区存储一起工作，你需要将以下配置添加到 **android/app/src/main/AndroidManifest.xml**：

  ```xml
  <manifest ... >
    <application android:requestLegacyExternalStorage="true" ...>
  </manifest>
  ```

**iOS**

- 将 `NSPhotoLibraryUsageDescription` 和 `NSPhotoLibraryAddUsageDescription` 键添加到你项目的 **ios/[app]/Info.plist**：

  ```xml
  <key>NSPhotoLibraryUsageDescription</key>
  <string>Give $(PRODUCT_NAME) permission to access your photos</string>
  <key>NSPhotoLibraryAddUsageDescription</key>
  <string>Give $(PRODUCT_NAME) permission to save photos</string>
  ```

</ConfigReactNative>

## 使用

<SnackInline label='获取相册并显示资源' dependencies={['expo-media-library']}>

{/* prettier-ignore */}
```jsx
import { useState, useEffect } from 'react';
import { Button, Text, SafeAreaView, ScrollView, StyleSheet, Image, View, Platform } from 'react-native';
import * as MediaLibrary from 'expo-media-library';

export default function App() {
  const [albums, setAlbums] = useState(null);
  const [permissionResponse, requestPermission] = MediaLibrary.usePermissions();

  async function getAlbums() {
    if (permissionResponse.status !== 'granted') {
      await requestPermission();
    }
    const fetchedAlbums = await MediaLibrary.getAlbumsAsync({
      includeSmartAlbums: true,
    });
    setAlbums(fetchedAlbums);
  }

  return (
    <SafeAreaView style={styles.container}>
      <Button onPress={getAlbums} title="获取相册" />
      <ScrollView>
        {albums && albums.map((album) => <AlbumEntry album={album} />)}
      </ScrollView>
    </SafeAreaView>
  );
}

function AlbumEntry({ album }) {
  const [assets, setAssets] = useState([]);

  useEffect(() => {
    async function getAlbumAssets() {
      const albumAssets = await MediaLibrary.getAssetsAsync({ album });
      setAssets(albumAssets.assets);
    }
    getAlbumAssets();
  }, [album]);

  return (
    <View key={album.id} style={styles.albumContainer}>
      <Text>
        {album.title} - {album.assetCount ?? 'no'} 个资源
      </Text>
      <View style={styles.albumAssetsContainer}>
        {assets && assets.map((asset) => (
          <Image source={{ uri: asset.uri }} width={50} height={50} />
        ))}
      </View>
    </View>
  );
}

/* @hide const styles = StyleSheet.create({ ... }); */
const styles = StyleSheet.create({
  container: {
    flex: 1,
    gap: 8,
    justifyContent: 'center',
    ...Platform.select({
      android: {
        paddingTop: 40,
      },
    }),
  },
  albumContainer: {
    paddingHorizontal: 20,
    marginBottom: 12,
    gap: 4,
  },
  albumAssetsContainer: {
    flexDirection: 'row',
    flexWrap: 'wrap',
  },
});
/* @end */
````

</SnackInline>

## API

```js
import * as MediaLibrary from 'expo-media-library';
```

<APISection packageName="expo-media-library" apiName="MediaLibrary" />

## 权限

### Android

以下权限会通过此库的 **AndroidManifest.xml** 自动添加：

<AndroidPermissions
  permissions={[
    'READ_EXTERNAL_STORAGE',
    'WRITE_EXTERNAL_STORAGE',
    'READ_MEDIA_IMAGES',
    'READ_MEDIA_VIDEO',
    'READ_MEDIA_AUDIO',
    'READ_MEDIA_VISUAL_USER_SELECTED',
  ]}
/>

### iOS

以下 usage description 键会被此库使用：

<IOSPermissions
  permissions={['NSPhotoLibraryUsageDescription', 'NSPhotoLibraryAddUsageDescription']}
/>
